--- a/contact.html
+++ b/contact.html
@@ -50,30 +50,47 @@
     </nav>
 
    <div class="main row">
-		<div class="six column" >
+		<div class="six columns" >
         <h4>Address</h4>
 		      <p>S-1, Swapnil Apartment VIII
 		       258, Trilanga, Shahpura
 		        Bhopal 462039
 					</p>
-          <div style="text-decoration:none; overflow:hidden;max-width:100%;"><div id="google-maps-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Aryabhat+Foundation,+Fortune+Pride,+Trilanga,+Bhopal,+Madhya+Pradesh,+India&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><style>#google-maps-canvas img{max-height:none;max-width:none!important;background:none!important;}</style></div>
+          
         <h4>Email</h4>
-        <p><a href="mailto:info@aryabhat.org">info@aryabhat.org</a><br/>       </p>
-        <p><a href="mailto:aryabhat.foundation@gmail.com">aryabhat.foundation@gmail.com</a><br/>
+        <p><a href="mailto:info@aryabhat.org">info@aryabhat.org</a>
+          <a href="mailto:aryabhat.foundation@gmail.com">aryabhat.foundation@gmail.com</a>
 				</p>
         <h4>Phone</h4>
-        <p>📞 +91 9425674075</p>
-
-        <p><a class="button button-primary" href="https://wa.me/9425674075">💬 Whatsapp 9425674075</a></p>
-
+        <p>📞 +91 9425674075 &nbsp; <a class="button button-primary" href="https://wa.me/9425674075">💬 </a></p>
+        <h4>Request Event</h4>
+        <p><a class="button button-primary" href="https://aryabhat.org/requestevent">Submit request for event </a></p>
 		 </div>
 
-     <p>
-      <a href="https://instagram.com/aryabhatorg"><img width="32" src="images/insta.svg"/></a> &nbsp;&nbsp;&nbsp;
-      <a href="https://youtube.com/aryabhatorg"><img width="32" src="images/yt.svg"/></a> &nbsp;&nbsp;&nbsp;
-      <a href="https://www.facebook.com/aryabhatorg"><img width="32" src="images/fb.svg"/></a> &nbsp;&nbsp;&nbsp;
-      <a href="https://x.com/aryabhatorg"><img width="32" src="images/x.svg"/></a>
-    </p>
+      <div class="six columns">
+          <div id="google-maps-canvas" style="height:400px; width:100%;max-width:100%;"><iframe
+              style="height:100%;width:100%;border:0;" frameborder="0"
+              src="https://www.google.com/maps/embed/v1/place?q=Aryabhat+Foundation,+Fortune+Pride,+Trilanga,+Bhopal,+Madhya+Pradesh,+India&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
+          </div>
+          <style>
+            #google-maps-canvas img {
+              max-height: none;
+              margin:5%;
+              max-width: none !important;
+              background: none !important;
+            }
+          </style>
+      </div>
+    </div>
+    <div class="main row" >
+      <div class="six columns" >
+        <p>
+          <a href="https://instagram.com/aryabhatorg"><img width="32" src="images/insta.svg"/></a> &nbsp;&nbsp;&nbsp;
+          <a href="https://youtube.com/aryabhatorg"><img width="32" src="images/yt.svg"/></a> &nbsp;&nbsp;&nbsp;
+          <a href="https://www.facebook.com/aryabhatorg"><img width="32" src="images/fb.svg"/></a> &nbsp;&nbsp;&nbsp;
+          <a href="https://x.com/aryabhatorg"><img width="32" src="images/x.svg"/></a>
+        </p>
+     </div>
     </div>
     <div class="row" >
   		<p> &copy; Aryabhat Foundation &middot;</p>
