--- a/download.html
+++ b/download.html
@@ -54,7 +54,7 @@
           <!--a class="button button-primary" target="_blank" href="files/2021/AstroQuiz2021-22.pdf">Astronomy Quiz Details</a-->
           <a class="button button-primary" target="_blank" href="files/Offered Activities.pdf">Offered Activities</a>
            <a class="button button-primary" target="_blank" href="https://aryabhat.org/qintro">Quiz Introduction Video</a>
-           <a class="button button-primary" target="_blank" href="files/2024/Circular_AstroQuiz_2024-25.pdf">Circular Astro Quiz 2024-25</a>
+           <a class="button button-primary" target="_blank" href="files/2025/Circular_AstroQuiz_2025-26.pdf">Circular Astro Quiz 2025-26</a>
         </div>
         <br>
         <h3>Study Material</h3>
@@ -63,30 +63,33 @@
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_2.pdf">Study Material 2</a>
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_3.pdf">Study Material 3</a>
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Glossary.pdf">Glossary</a>
-            <br>Updated on 1 Jul 2024
+            <br>will be updated on 1 July 2025
         </div>
         <br>
         <h3>Institutional Registration</h3>
+        <p>Shall open on 1 April 2025</p>    ( Section for Schools Only)
         <div>
-          ( Section for Schools Only)<!--, for individual registration go
+      <!--, for individual registration go
           <a target="_blank" href="https://quiz.aryabhat.org">here</a> ) -->
           <br>          <br>
-          <a class="button button-primary" target="_blank" href="files/2024/FlowChart.pdf">Flow Chart for Institutions</a>
-          <a class="button button-primary" target="_blank" href="files/2024/Forwarding_Letter_to_Aryabhat.pdf">Letter for Forwarding Institution Details </a>
+          <a class="button button-primary" target="_blank" href="files/2025/Flow.pdf">Flow Chart for Institutions</a>
+          <a class="button button-primary" target="_blank" href="files/2025/Fwd_Letter.pdf">Letter for Forwarding Institution Details </a>
           <a class="button button-primary" target="_blank" href="files/2024/Institutional_Format.xls">Format for Institutional Entries </a>
           <br>
         </div>
         <br>
         <h3>Individual Registration</h3>
+        <p>Shall open on 20 June 2025</p>  
         <div>
-          <p>Registration Closed <a href="https://quiz.aryabhat.org">quiz.aryabhat.org</a></p>
+          <!--p>Registration Closed <a href="https://quiz.aryabhat.org">quiz.aryabhat.org</a></p-->
         </div>
         <br>
-        <h3>Circulars</h3>
+        <h3>Government Circulars</h3>
+        <p>Will be released in course of time</p>
         <div>
-          <a class="button button-primary" target="_blank" href="files/2024/NVS_5354_15Mar2024.pdf">JNV Circular</a>
+          <!--a class="button button-primary" target="_blank" href="files/2024/NVS_5354_15Mar2024.pdf">JNV Circular</a>
           <a class="button button-primary" target="_blank" href="files/2024/DPI_2024.pdf">DPI Circular</a>
-          <a class="button button-primary" target="_blank" href="files/2024/KVS_Circular.pdf">KV Circular</a>
+          <a class="button button-primary" target="_blank" href="files/2024/KVS_Circular.pdf">KV Circular</a!-->
         </div>
         <br>
         <h3>Volunteer</h3>
