--- a/quiz.html
+++ b/quiz.html
@@ -51,13 +51,11 @@
 
    <div class="main row">
 		<div class="six column" >
-
       <h2>Details of the Quiz</h2>
-      <p>We are glad to announce the Aryabhat Astronomy Quiz for the academic year 2024-25. The program has stepped into 29th successive year. The details of this activity are described hereunder :- </p>
       <h3> The Organisation :</h3>
       <p>Aryabhat Foundation is a dedicated endeavor for promotion of Astronomy and Basic Science. The movement started in 1995, which took shape as a registered social service organisation. Backed by a group of people dedicated to their duties towards society, the organisation is committed to make learning Basic Science enjoyable for youngsters, thus inculcating a science-based temperament in them.</p>
       <h3>The Program :</h3>
-      <p>Astronomy is a thrilling hobby for all age groups. It also makes a strong platform for youngsters aspiring for an exciting career in space technology. Aryabhat Astronomy Quiz is aimed at developing the interest of the school students in this field through practical exposure. The quiz is a two-tier competition consisting of a preliminary test followed by a practical examination. The preliminary test is a cream-separation exercise conducted on a digital platform. Selected participants will qualify for the secondary level by merit in the preliminary test. These participants will be offered training in telescope-operation, sky reading and practical Astronomy at our Bhopal Centre. The lodging-boarding will be free for participants availing night camps, but no TA/DA will be paid at any stage. Those who fail to attend the training will not be included for the secondary level. The secondary level examination will be held on Saturday 28 December 2024. This test is meant to examine the ability of the participants in practical Astronomy. Final winners will be selected on their overall performance.</p>
+      <p>Astronomy is a thrilling hobby for all age groups. It also makes a strong platform for youngsters aspiring for an exciting career in space technology. Aryabhat Astronomy Quiz is aimed at developing the interest of the school students in this field through practical exposure. The quiz is a two-tier competition consisting of a preliminary test followed by a practical examination. The preliminary test is a cream-separation exercise conducted on a digital platform. Selected participants will qualify for the secondary level by merit in the preliminary test. These participants will be offered training in telescope-operation, sky reading and practical Astronomy at our Bhopal Centre. The lodging-boarding will be free for participants availing night camps, but no TA/DA will be paid at any stage. Those who fail to attend the training will not be included for the secondary level. The secondary level examination will be held on Saturday 20 December 2025. This test is meant to examine the ability of the participants in practical Astronomy. Final winners will be selected on their overall performance.</p>
 
       <h3>Eligibility :</h3>
       <p>Students from class 6 to class 9 (both inclusive) from any school situated in Madhya Pradesh are eligible to take part in the quiz. Students availing home-schooling in the given class range and permanently residing in Madhya Pradesh are also eligible.</p>
@@ -74,32 +72,32 @@
       </p>
      
       <h3>The Prizes :</h3>
-      <p>The final winners of the quiz shall visit the observatory of their choice from those at Gauribidanur, Kavalur, Kodaikanal, Nainital and Udaipur & Mount Abu in small groups. Observatories will be allotted to winners based on overall merit and their choice-options. The trips to Observatories shall proceed in next summers. </p>
+      <p>The final winners of the quiz shall visit the observatory of their choice from those at Dongla, Kavalur, Kodaikanal, Nainital and Udaipur & Mount Abu in small groups. Observatories will be allotted to winners based on overall merit and their choice-options. The trips to Observatories shall proceed in next summers.</p>
  
       <h3>How to prepare :</h3>
-      <p>The questions in the quiz are based on Astronomy, Space & related science. Participants must acquire a good knowledge of the Solar System, Deep Sky Objects & General Astronomy. Senior students of Aryabhat have compiled specific Study Material and Demo Quiz which will be available on our website. </p>
+      <p>The questions in the quiz are based on Astronomy, Space & related science. Participants must acquire a good knowledge of the Solar System, Deep Sky Objects & General Astronomy. Senior students of Aryabhat have compiled specific Study Material and Demo Quiz which will be available on our website.</p>
 
       <h3>How to participate :</h3>
       <p>Institutions shall the particulars of their students to us by email. The format for sending entries is available on our website. Individual participants shall register for the Quiz using their mobile number and email ID on the Portal given on our website. For individual participants, the mobile number will be used as login-ID, hence cannot be changed. The relevant date-line is given below :-</p>
         <table border="1" style="border-collapse: collapse;margin-left: auto;margin-right: auto;">
             <tr>
                 <td style="padding:12px;color:#ddd;">Institutional Registration</td>
-                <td style="padding:12px;color:#fff;"><b>1 April to 25 July 2024</b></td>
+                <td style="padding:12px;color:#fff;"><b>1 April to 25 July 2025</b></td>
             </tr><tr>
                 <td style="padding:12px;color:#ddd;">Individual Registration</td>
-                <td style="padding:12px;color:#fff;"><b>20 June to 25 July 2024</b></td>
+                <td style="padding:12px;color:#fff;"><b>20 June to 25 July 2025</b></td>
             </tr>
             <tr>
                 <td style="padding:12px;color:#ddd;">Attempting of Online Quiz</td>
-                <td style="padding:12px;color:#fff;"><b>1 August to 6 August 2024</b></td>
+                <td style="padding:12px;color:#fff;"><b>1 August to 6 August 2025</b></td>
             </tr>
             <tr>
                 <td style="padding:12px;color:#ddd;">Conducting of Quiz for Institutions / Common Centres</td>
-                <td style="padding:12px;color:#fff;"><b>7 August to 3 September 2024</b></td>
+                <td style="padding:12px;color:#fff;"><b>7 August to 3 September 2025</b></td>
             </tr>
             <tr>
                 <td style="padding:12px;color:#ddd;">Secondary Level Examination</td>
-                <td style="padding:12px;color:#fff;"><b>28 December 2024</b></td>
+                <td style="padding:12px;color:#fff;"><b>20 December 2025</b></td>
             </tr>
         </table>
       </p>
@@ -126,7 +124,7 @@
      <p style="text-align:center;">
      website : <a href="www.aryabhat.org">www.aryabhat.org</a>
      </p>
-     <p style="text-align:center;"><b>Quiz Coordinator</b><br>Alok Mandavgane  +91 8225855428</p>
+     <p style="text-align:center;"><b>Quiz Coordinator</b><br>Alok Mandavgane  +91 9425631310, +91 8225855428</p>
 
      <p style="text-align:center;"></p>
 
