--- a/index.html
+++ b/index.html
@@ -49,11 +49,18 @@
    <div class="main row">
     <div class="four columns" style="display: flex; flex-direction: column; align-items: center;">
       <h3>Notices</h3>
-<br>
-<h4>Aryabhat Astronomy Quiz 2024-25 </h4>
-<p> Secondary Level Result Declared</p>
+<p>Aryabhat Astronomy Quiz 2025-26
+  <a target="_" href="files/2025/Circular_AstroQuiz_2025-26.pdf">Circular Released</a>
+</p>
+<p> 
+  <a target="_" href="files/2024/Final_MeritList_202425.pdf">Last year's winners</a>
+  <br>
+  <br>
+  <a target="_" href="files/2024/Summary_2024-25.pdf">Last year's participation</a>
+  <br>
+</p>
 
-
+<h4>Request Event</h4><a class="button button-primary" href="https://aryabhat.org/requestevent">Submit request for event </a>
 <!--h4>Aryabhat Astronomy Quiz 2023-24 </!h4>
 <p>Proposed dates for Observatory Trips</p>
 <table style="border:1px solid white;">
@@ -79,8 +86,6 @@
   </tr>
 
 </table-->
-<p> <a class="button button-primary" target="_" href="files/2024/Final_MeritList_202425.pdf">Final Merit List</a></p>
-<p> Congratulations to all the winners! </p>
     </div>
 		<div class="eight columns" style="display: flex; flex-direction: column; align-items: center;">
 
