--- a/contact.html
+++ b/contact.html
@@ -52,9 +52,11 @@
    <div class="main row">
 		<div class="six columns" >
         <h4>Address</h4>
-		      <p>S-1, Swapnil Apartment VIII
-		       258, Trilanga, Shahpura
-		        Bhopal 462039
+		      <p>Aryabhat Foundation
+            <br>
+            S-1, Swapnil Apartment VIII
+            <br>258, Trilanga, Shahpura, Bhopal 462039
+            
 					</p>
           
         <h4>Email</h4>
@@ -62,13 +64,13 @@
           <a href="mailto:aryabhat.foundation@gmail.com">aryabhat.foundation@gmail.com</a>
 				</p>
         <h4>Phone</h4>
-        <p>📞 +91 9425674075 &nbsp; <a class="button button-primary" href="https://wa.me/9425674075">💬 </a></p>
+        <p>📞 +91 9425674075 &nbsp; <a class="button button-primary" href="https://wa.me/9425674075">💬 whatsapp </a></p>
         <h4>Request Event</h4>
         <p><a class="button button-primary" href="https://aryabhat.org/requestevent">Submit request for event </a></p>
 		 </div>
 
       <div class="six columns">
-          <div id="google-maps-canvas" style="height:400px; width:100%;max-width:100%;"><iframe
+          <div id="google-maps-canvas" style="height:300px; width:100%;"><iframe
               style="height:100%;width:100%;border:0;" frameborder="0"
               src="https://www.google.com/maps/embed/v1/place?q=Aryabhat+Foundation,+Fortune+Pride,+Trilanga,+Bhopal,+Madhya+Pradesh,+India&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
           </div>
