error fix on circular

--- a/quiz.html
+++ b/quiz.html
@@ -78,7 +78,7 @@
       <p>The questions in the quiz are based on Astronomy, Space & related science. Participants must acquire a good knowledge of the Solar System, Deep Sky Objects & General Astronomy. Senior students of Aryabhat have compiled specific Study Material and Demo Quiz which will be available on our website.</p>
 
       <h3>How to participate :</h3>
-      <p>Institutions shall the particulars of their students to us by email. The format for sending entries is available on our website. Individual participants shall register for the Quiz using their mobile number and email ID on the Portal given on our website. For individual participants, the mobile number will be used as login-ID, hence cannot be changed. The relevant date-line is given below :-</p>
+      <p>Institutions shall send the particulars of their students to us by email. The format for sending entries is available on our website. Individual participants shall register for the Quiz using their mobile number and email ID on the Portal given on our website. For individual participants, the mobile number will be used as login-ID, hence cannot be changed. The relevant date-line is given below :-</p>
         <table border="1" style="border-collapse: collapse;margin-left: auto;margin-right: auto;">
             <tr>
                 <td style="padding:12px;color:#ddd;">Institutional Registration</td>
