--- a/download.html
+++ b/download.html
@@ -87,8 +87,8 @@
         <h3>Government Circulars</h3>
         <p>Will be released in course of time</p>
         <div>
-          <!--a class="button button-primary" target="_blank" href="files/2024/NVS_5354_15Mar2024.pdf">JNV Circular</a>
-          <a class="button button-primary" target="_blank" href="files/2024/DPI_2024.pdf">DPI Circular</a-->
+          <!--a class="button button-primary" target="_blank" href="files/2024/NVS_5354_15Mar2024.pdf">JNV Circular</a-->
+          <a class="button button-primary" target="_blank" href="files/2025/DPI_2025.pdf">DPI Circular</a>
           <a class="button button-primary" target="_blank" href="files/2025/KVSBhopal.pdf">KV Circular</a>
         </div>
         <br>
