--- a/download.html
+++ b/download.html
@@ -67,7 +67,7 @@
         </div>
         <br>
         <h3>Institutional Registration</h3>
-        <p>Shall open on 1 April 2025</p>    ( Section for Schools Only)
+        <p> 1 April 2025 to 25 July 2025</p>    ( Section for Schools Only)
         <div>
       <!--, for individual registration go
           <a target="_blank" href="https://quiz.aryabhat.org">here</a> ) -->
@@ -79,7 +79,7 @@
         </div>
         <br>
         <h3>Individual Registration</h3>
-        <p>Shall open on 20 June 2025</p>  
+        <p>20 June 2025 to 25 July 2025</p>  
         <div>
           <!--p>Registration Closed <a href="https://quiz.aryabhat.org">quiz.aryabhat.org</a></p-->
         </div>
