updated download page

--- a/download.html
+++ b/download.html
@@ -57,6 +57,7 @@
            <a class="button button-primary" target="_blank" href="files/2025/Circular_AstroQuiz_2025-26.pdf">Circular Astro Quiz 2025-26</a>
         </div>
         <br>
+        <br>
         <h3>Study Material</h3>
         <div>
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_1.pdf">Study Material 1</a>
@@ -66,26 +67,25 @@
             <br>will be updated on 1 July 2025
         </div>
         <br>
-        <h3>Institutional Registration</h3>
-        <p> 1 April 2025 to 25 July 2025</p>    ( Section for Schools Only)
+        <br>
+        <h3>Institutional Registration <span style="font-size:12px; color:white" > (only for Schools)</span></h3>
         <div>
       <!--, for individual registration go
           <a target="_blank" href="https://quiz.aryabhat.org">here</a> ) -->
-          <br>          <br>
           <a class="button button-primary" target="_blank" href="files/2025/Flow.pdf">Flow Chart for Institutions</a>
           <a class="button button-primary" target="_blank" href="files/2025/Fwd_Letter.pdf">Letter for Forwarding Institution Details </a>
           <a class="button button-primary" target="_blank" href="files/2024/Institutional_Format.xls">Format for Institutional Entries </a>
-          <br>
+
+           <br>1 April 2025 to 25 July 2025
         </div>
         <br>
         <h3>Individual Registration</h3>
-        <p>20 June 2025 to 25 July 2025</p>  
+         <a class="button button-primary" target="_blank" href="https://quiz.aryabhat.org">20 June 2025 to 25 July 2025</a>
         <div>
           <!--p>Registration Closed <a href="https://quiz.aryabhat.org">quiz.aryabhat.org</a></p-->
         </div>
         <br>
         <h3>Government Circulars</h3>
-        <p>Will be released in course of time</p>
         <div>
           <!--a class="button button-primary" target="_blank" href="files/2024/NVS_5354_15Mar2024.pdf">JNV Circular</a-->
           <a class="button button-primary" target="_blank" href="files/2025/DPI_2025.pdf">DPI Circular</a>
