updated study material, home page link for quiz portal

--- a/download.html
+++ b/download.html
@@ -64,11 +64,11 @@
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_2.pdf">Study Material 2</a>
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_3.pdf">Study Material 3</a>
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Glossary.pdf">Glossary</a>
-            <br>will be updated on 1 July 2025
+            <br>Updated on 1 July 2025
         </div>
         <br>
         <br>
-        <h3>Institutional Registration <span style="font-size:12px; color:white" > (only for Schools)</span></h3>
+        <h3 id="institutional">Institutional Registration <span style="font-size:12px; color:white" > (only for Schools)</span></h3>
         <div>
       <!--, for individual registration go
           <a target="_blank" href="https://quiz.aryabhat.org">here</a> ) -->
