--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
    <div class="main row">
     <div class="four columns" style="display: flex; flex-direction: column; align-items: center;">
       <h3>Updates</h3>
+      <p>Astro Quiz registrations are open</p >
+               <a class="button button-primary" target="_blank" href="https://quiz.aryabhat.org"> for individuals </a>
+               <br><br>
+               <a class="button button-primary" target="_blank" href="download.html#institutional">for institutions </a>
+               
+               
+
 <p>Aryabhat Astronomy Quiz 2025-26
   <a target="_" href="files/2025/Circular_AstroQuiz_2025-26.pdf">Circular Released</a>
 <br>  <br>
