--- a/download.html
+++ b/download.html
@@ -90,6 +90,7 @@
           <!--a class="button button-primary" target="_blank" href="files/2024/NVS_5354_15Mar2024.pdf">JNV Circular</a-->
           <a class="button button-primary" target="_blank" href="files/2025/DPI_2025.pdf">DPI Circular</a>
           <a class="button button-primary" target="_blank" href="files/2025/KVSBhopal.pdf">KV Circular</a>
+          <a class="button button-primary" target="_blank" href="files/2025/NVS_2025-26.pdf">JNV Circular</a>
         </div>
         <br>
         <h3>Volunteer</h3>
