--- a/download.html
+++ b/download.html
@@ -73,7 +73,7 @@
       <!--, for individual registration go
           <a target="_blank" href="https://quiz.aryabhat.org">here</a> ) -->
           <a class="button button-primary" target="_blank" href="files/2025/Flow.pdf">Flow Chart for Institutions</a>
-          <a class="button button-primary" target="_blank" href="files/2025/Fwd_Letter.pdf">Letter for Forwarding Institution Details </a>
+          <a class="button button-primary" target="_blank" href="files/2025/Forwarding_Letter_for_Entries.pdf">Letter for Forwarding Institution Details </a>
           <a class="button button-primary" target="_blank" href="files/2024/Institutional_Format.xls">Format for Institutional Entries </a>
 
            <br>1 April 2025 to 25 July 2025
