declaring registrations closed

--- a/download.html
+++ b/download.html
@@ -80,9 +80,8 @@
         </div>
         <br>
         <h3>Individual Registration</h3>
-         <a class="button button-primary" target="_blank" href="https://quiz.aryabhat.org">20 June 2025 to 25 July 2025</a>
-        <div>
-          <!--p>Registration Closed <a href="https://quiz.aryabhat.org">quiz.aryabhat.org</a></p-->
+         <div>
+          <p>Registration Closed <a href="https://quiz.aryabhat.org">quiz.aryabhat.org</a></p>
         </div>
         <br>
         <h3>Government Circulars</h3>
