added link to quiz portal

--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
    <div class="main row">
     <div class="four columns" style="display: flex; flex-direction: column; align-items: center;">
       <h3>Updates</h3>
-      <p>Astro Quiz registrations are closed</p >
-                     
+      <!--p>Astro Quiz registrations are closed</p -->
+      <br><br> <a class="button button-primary" href="https://quiz.aryabhat.org">Quiz Portal</a >
+        for attempting quiz online
 
+      <hr />
 <p>
   <a target="_" href="files/2024/Final_MeritList_202425.pdf">Last year's winners</a>
   <br>
