updated link to quiz portal

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <div class="four columns" style="display: flex; flex-direction: column; align-items: center;">
       <h3>Updates</h3>
       <!--p>Astro Quiz registrations are closed</p -->
-      <br><br> <a class="button button-primary" href="https://quiz.aryabhat.org">Quiz Portal</a >
-        for attempting quiz online
+      <br><br> <a class="button button-primary" href="https://quiz.aryabhat.org/school">Quiz Login</a >
+        for schools attempting quiz online
 
       <hr />
 <p>
