--- a/download.html
+++ b/download.html
@@ -50,7 +50,7 @@
    <div class="main row">
 		<div class="six column" >
         <h3>Information</h3>
-        <div>
+        <div class="card">
           <!--a class="button button-primary" target="_blank" href="files/2021/AstroQuiz2021-22.pdf">Astronomy Quiz Details</a-->
           <a class="button button-primary" target="_blank" href="files/Offered Activities.pdf">Offered Activities</a>
            <a class="button button-primary" target="_blank" href="https://aryabhat.org/qintro">Quiz Introduction Video</a>
@@ -59,7 +59,7 @@
         <br>
         <br>
         <h3>Study Material</h3>
-        <div>
+        <div class="card">
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_1.pdf">Study Material 1</a>
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_2.pdf">Study Material 2</a>
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_3.pdf">Study Material 3</a>
@@ -68,8 +68,9 @@
         </div>
         <br>
         <br>
+
         <h3 id="institutional">Institutional Registration <span style="font-size:12px; color:white" > (only for Schools)</span></h3>
-        <div>
+        <div class="card">
       <!--, for individual registration go
           <a target="_blank" href="https://quiz.aryabhat.org">here</a> ) -->
           <a class="button button-primary" target="_blank" href="files/2025/Flow.pdf">Flow Chart for Institutions</a>
@@ -80,12 +81,12 @@
         </div>
         <br>
         <h3>Individual Registration</h3>
-         <div>
-          <p>Registration Closed <a href="https://quiz.aryabhat.org">quiz.aryabhat.org</a></p>
+         <div class="card">
+          <p>Registration Closed</p>
         </div>
         <br>
         <h3>Government Circulars</h3>
-        <div>
+        <div class="card">
           <!--a class="button button-primary" target="_blank" href="files/2024/NVS_5354_15Mar2024.pdf">JNV Circular</a-->
           <a class="button button-primary" target="_blank" href="files/2025/DPI_2025.pdf">DPI Circular</a>
           <a class="button button-primary" target="_blank" href="files/2025/KVSBhopal.pdf">KV Circular</a>
@@ -93,7 +94,7 @@
         </div>
         <br>
         <h3>Volunteer</h3>
-        <div>
+        <div class="card">
           <a class="button button-primary" target="_blank" href="files/Become_a_volunteer.pdf">Become a Volunteer</a>
           <a class="button button-primary" target="_blank" href="files/Volunteer_application.pdf">Volunteer Application Form</a>
         </div>
