--- a/index.html
+++ b/index.html
@@ -49,22 +49,23 @@
    <div class="main row">
     <div class="four columns" style="display: flex; flex-direction: column; align-items: center;">
       <h3>Updates</h3>
-      <!--p>Astro Quiz registrations are closed</p -->
-      <br><br> <a class="button button-primary" href="https://quiz.aryabhat.org/school">Quiz Login</a >
-        for schools attempting quiz online
-
-      <hr />
-<p>
+      <div class="card center">
+          <!--p>Astro Quiz registrations are closed</p -->
+          <br> <a class="button button-primary " href="https://quiz.aryabhat.org/school">Quiz Login</a ><br>
+            for schools attempting quiz online
+    </div>
+<p class="card">
   <a target="_" href="files/2024/Final_MeritList_202425.pdf">Last year's winners</a>
   <br>
 
   <a target="_" href="files/2024/Summary_2024-25.pdf">Last year's participation</a>
   <br>
-  <br>
-Request Event
-<br>
-<a class="button button-primary" href="https://aryabhat.org/requestevent">Submit request for event </a>
 </p>
+<p class="card">
+    Request Event
+    <br>
+    <a class="card button button-primary" href="https://aryabhat.org/requestevent">Submit request for event </a>
+  </p>
 
 
 <!--h4>Aryabhat Astronomy Quiz 2023-24 </!h4>
