added link to video

--- a/download.html
+++ b/download.html
@@ -64,6 +64,7 @@
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_2.pdf">Study Material 2</a>
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_3.pdf">Study Material 3</a>
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Glossary.pdf">Glossary</a>
+          <a class="button button-primary" target="_blank" href="https://youtu.be/s5_1iDcbVrQ">▶️ Video Lesson</a>
             <br>Updated on 1 July 2025
         </div>
         <br>
