added book mark study material

--- a/download.html
+++ b/download.html
@@ -58,7 +58,7 @@
         </div>
         <br>
         <br>
-        <h3>Study Material</h3>
+        <h3 id="studymaterial">Study Material</h3>
         <div class="card">
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_1.pdf">Study Material 1</a>
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_2.pdf">Study Material 2</a>
