added list faqs

--- a/quiz.html
+++ b/quiz.html
@@ -51,6 +51,97 @@
 
    <div class="main row">
 		<div class="six column" >
+      <script>
+        function toggle(divId) {
+            var element = document.getElementById(divId);
+            if (element.style.display === "none") {
+                element.style.display = "block"; // Or "flex", "inline-block", etc., depending on desired display type
+            } else {
+                element.style.display = "none";
+            }
+        }
+      </script>
+      <a class="button button-primary" onclick="toggle('faqs')"> Quiz FAQs 👆🏻  </a>
+      <br>
+      <div class="card" id="faqs" style="display: none;">
+        <h4>Click on the Question to get a clarification</h4>
+        <ul>
+        <li><a href="https://aryabhat.org/faqs/WhatIsAstroQuiz">What is Aryabhat Astronomy Quiz ?</a></li>  
+          <li><a href="https://aryabhat.org/faqs/ObjectiveOfQuiz">What is the objective of the Quiz ?</a></li><li><a href="https://aryabhat.org/faqs/WhatisAryabhat">What kind of Organization is Aryabhat ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/WhenWasFirstQuiz">When was this quiz first organized ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/WhoCanParticipate">Who can participate in quiz ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/OustideMPStudents">Can students outside MP participate ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/WhatDoSelectedGet">What do selected students get after first level ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/WhenAreCamps">When are these camps organized ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/AnyEntryFees">Is there any entry fees for the Quiz ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/SecondaryLevelFees">Any fees for the secondary level ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/ParentsStayAtAryabhat">Can teachers or parents stay
+            with students at Aryabhat ?</a>
+          </li>
+          <li><a href="https://aryabhat.org/faqs/KindOfQuestions">What kind of questions are there in first level ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/QuizSyllabus">What is the syllabus of the Quiz ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/WhereToStudy">Where can one study all this ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/HowToRegister">How can one register for the Quiz ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/SchoolRegistration">How can schools register for the Quiz ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/MobileForRegistration">Can one use mobile for
+            registration ?</a>
+          </li>
+          <li><a href="https://aryabhat.org/faqs/ConfirmationOfRegistration">How do we get confirmation of
+            registration ?</a>
+          </li>
+          <li><a href="https://aryabhat.org/faqs/ChangeOfMobile">Can we change mobile number after registration ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/MarkingPattern">Is there negative marking ? What is marking pattern ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/DemoQuizRecommendedBooks">is there any Demo Quiz ? Any
+            recommended books ?</a>
+          </li>
+          <li><a href="https://aryabhat.org/faqs/SecondaryExamWhen">When will the Secondary Exam be held ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/SecondaryExamOutline">What is the outline of the Secondary level
+            examination ?</a>
+          </li>
+          <li><a href="https://aryabhat.org/faqs/LastDateRegistration">What is the last date of registration ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/QuizDates">What are the dates of Quiz for Schools and Individuals
+            ?</a>
+          </li>
+          <li><a href="https://aryabhat.org/faqs/HowWillIndividualsParticipate">Will there be any centre for
+            Individual Participants ?</a>
+          </li>
+          <li><a href="https://aryabhat.org/faqs/ComputersNeededForSchool">How many computers needed in
+            school ?</a>
+          </li>
+          <li><a href="https://aryabhat.org/faqs/IsInternetRequiredForSchool">How can we participate without
+            Internet ?</a>
+          </li>
+          <li><a href="https://aryabhat.org/faqs/WhereIsSecondaryTraining">Where is the training held for
+            secondary level ?</a>
+          </li>
+          <li><a href="https://aryabhat.org/faqs/PreferredDatesForTraining">Can students get preferred dates
+            for training ?</a>
+          </li>
+          <li><a href="https://aryabhat.org/faqs/PrizeForWinners">What do the final winners get ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/VisitScheduleObsevatoryChoice">Can we choose our own
+            observatories ?</a>
+          </li>
+          <li><a href="https://aryabhat.org/faqs/TripOrganizationAndEscorts">Can parents come along on these
+            trips ?</a>
+          </li>
+          <li><a href="https://aryabhat.org/faqs/NoTADA">Will the students get any TA/DA ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/ParticipateEveryYear">Can one student participate in the quiz only once
+            ?</a>
+          </li>
+          <li><a href="https://aryabhat.org/faqs/PassingMarks">Are there any passing marks for the quiz ?</a></li>
+          <li><a href="https://aryabhat.org/faqs/ScoreImprovementAttempt">Will there be any chance to
+            better the score ?</a>
+          </li>
+          <li><a href="https://aryabhat.org/faqs/DoubleRegistration">Can a student register both with school and
+            individually ?</a>
+          </li>
+          <li><a href="https://aryabhat.org/faqs/QuizDateMissed">What if the quiz date is missed ?
+          </li><li><a href="https://aryabhat.org/faqs/MessageForParticipants">What is your message for the
+            participants ?</a>
+          </li>
+        </ul>
+      </div>
+
       <h2>Details of the Quiz</h2>
       <h3> The Organisation :</h3>
       <p>Aryabhat Foundation is a dedicated endeavor for promotion of Astronomy and Basic Science. The movement started in 1995, which took shape as a registered social service organisation. Backed by a group of people dedicated to their duties towards society, the organisation is committed to make learning Basic Science enjoyable for youngsters, thus inculcating a science-based temperament in them.</p>
