added temp login for individual

--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
       <h3>Updates</h3>
       <div class="card center">
           <!--p>Astro Quiz registrations are closed</p -->
+          <br> <a class="button button-primary " href="https://quiz.aryabhat.org/login">Quiz Login for Individuals</a ><br>
+            
+    </div>
+    <div style="padding:12px;"></div>
+      <div class="card center">
+          <!--p>Astro Quiz registrations are closed</p -->
           <br> <a class="button button-primary " href="https://quiz.aryabhat.org/school">Quiz Login</a ><br>
             for schools attempting quiz online
     </div>
