updated front page

--- a/index.html
+++ b/index.html
@@ -49,26 +49,18 @@
    <div class="main row">
     <div class="four columns" style="display: flex; flex-direction: column; align-items: center;">
       <h3>Updates</h3>
-      <div class="card center">
-          <!--p>Astro Quiz registrations are closed</p -->
-          <br> <a class="button button-primary " href="https://quiz.aryabhat.org/login">Quiz Login for Individuals</a ><br>
-            
-    </div>
-    <div style="padding:12px;"></div>
-      <div class="card center">
-          <!--p>Astro Quiz registrations are closed</p -->
-          <br> <a class="button button-primary " href="https://quiz.aryabhat.org/school">Quiz Login</a ><br>
-            for schools attempting quiz online
-    </div>
 <p class="card">
-  <a target="_" href="files/2024/Final_MeritList_202425.pdf">Last year's winners</a>
+  <span>Astro Quiz 2025-26</span>
   <br>
-
-  <a target="_" href="files/2024/Summary_2024-25.pdf">Last year's participation</a>
+  <br>
+  <a target="_" class="button-primary button" href="files/2025/Merit_2025-26.pdf">Merit List </a>
+  <br>
+  <a target="_"  class="button-primary button"  href="files/2025/Short_Summ_2025.pdf">Summary of Participation</a>
   <br>
 </p>
 <p class="card">
     Request Event
+    <br>
     <br>
     <a class="card button button-primary" href="https://aryabhat.org/requestevent">Submit request for event </a>
   </p>
