result secondary declared

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
   <span>Astro Quiz 2025-26</span>
   <br>
   <br>
-  <a target="_" class="button-primary button" href="files/2025/Merit_2025-26.pdf">Merit List </a>
-  <br>
+  <a target="_" class="button-primary button" href="files/2025/Mrt2025.pdf">Secondary Level Merit List</a>
+  <!--br>
   <a target="_"  class="button-primary button"  href="files/2025/Short_Summ_2025.pdf">Summary of Participation</a>
-  <br>
+  <br-->
 </p>
 <p class="card">
     Request Event
